2008-08-18  Nicolas François  <nicolas.francois@centraliens.net>

	* src/grpck.c: Added function fail_exit(). Check failure to unlock
	files. Report errors to stderr and syslog, but continue.
	* src/grpconv.c: Check failure to unlock files. Report errors to
	stderr and syslog, but continue.

2008-08-18  Nicolas François  <nicolas.francois@centraliens.net>

	* src/passwd.c: Check failure to unlock files. Report errors to
	stderr and syslog, but continue.

2008-08-17  Nicolas François  <nicolas.francois@centraliens.net>

	* src/chfn.c, src/chgpasswd.c, src/chpasswd.c, src/gpasswd.c,
	src/groupadd.c, src/groupdel.c, src/groupmems.c, src/groupmod.c,
	src/grpconv.c, src/grpunconv.c, src/newusers.c, src/pwconv.c,
	src/pwunconv.c, src/useradd.c, src/userdel.c: Harmonize the name
	of the variables keeping the lock status, to match the shadow
	library prefixes.

2008-08-17  Nicolas François  <nicolas.francois@centraliens.net>

	* src/chage.c, src/chgpasswd.c, src/chpasswd.c, src/chsh.c,
	src/gpasswd.c, src/groupadd.c, src/groupdel.c, src/groupmems.c,
	src/groupmod.c, src/grpck.c, src/grpconv.c, src/grpunconv.c,
	src/newusers.c, src/passwd.c, src/pwck.c, src/pwconv.c,
	src/pwunconv.c, src/useradd.c, src/userdel.c, src/usermod.c: In
	case of a lock failure, indicate to the user that she can try
	again later. Do not log to syslog.

2008-08-17  Nicolas François  <nicolas.francois@centraliens.net>

	* NEWS, src/passwd.c: For compatibility with other passwd version,
	the --lock an --unlock options do not lock or unlock the user
	account anymore.  They only lock or unlock the user's password.
	* man/passwd.1.xml: Document above change. Document how an account
	can be locked and what a password lock means.

2008-08-15  Nicolas François  <nicolas.francois@centraliens.net>

	* man/groupadd.8.xml: Fix the regular expression for group policy.
	The final $ character is optional.
	* man/groupadd.8.xml: Likewise.
	* man/groupadd.8.xml: Indicate the maximum size of usernames.
