@@ -6,6 +6,10 @@ shadow-4.1.2.1 -> shadow-4.1.3						UNRELEASED
 - packaging
   * Added support for OpenPAM.
 
+- gpasswd
+  * Added support for long options --add (-a), --delete (-d),
+    --remove-password (-r), --restrict (-R), --administrators (-A), and
+    --members (-M).
 - groupmems
   * Check if user exist before they are added to groups.
   * Avoid segfault in case the specified group does not exist in /etc/group.
